# python-trainee-assignment

./: .gitignore  pyproject.toml  requirements.txt  setup.py
matrix_traversal/: __init__.py  main.py
tests/: test_main.py
